further alignment corrections, font change, target attribute on anchor tags

--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Space Grotesk', sans-serif;
 }
 
 html {
@@ -104,13 +104,14 @@ header .wrapper {
 }
 
 h1 {
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 1.5px black;
     -webkit-text-fill-color: #F6EFEE;
-    font-size: 4rem;
+    font-size: 6rem;
+    font-weight: 700;
 }
 
 .headerQuote {
-    font-family: 'EB Garamond', serif;
+    font-family: 'Garamond', serif;
     padding: 20px 20px 0 0;
     font-size: 1.25rem;
 }
@@ -138,6 +139,7 @@ h1 {
 
 .navList li a {
     color: black;
+    padding: 0 10px;
 }
 
 
@@ -164,6 +166,7 @@ h1 {
     border-top: 1px solid;
     border-bottom: 1px solid;
     margin: 10px 0;
+    font-size: 1.8rem;
 }
 
 .project .subtitle {
@@ -175,11 +178,9 @@ h1 {
 
 .description {
     padding: 20px 0;
-}
-
-.description {
-    font-size: .9rem;
-    line-height: 24px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.2rem;
+    line-height: 40px;
 }
 
 .projectTools {
@@ -198,6 +199,9 @@ h1 {
     color: white;
     margin: 20px 0;
     box-shadow: 2px 2px white;
+    text-decoration: none;
+    display: flex;
+    align-content: center;
 }
 
 .project .projectButton:hover {
@@ -206,7 +210,7 @@ h1 {
 
 .project .projectButton:active {
     box-shadow: 0 0 #9da2ac;
-    transform: translate(3px, 3px);
+    transform: translate(4px, 4px);
 }
 
 .project .buttonBox {
